@@ -1,7 +1,6 @@
 package formatter;
 
 
-
 import com.sun.tools.javac.parser.Item;
 import com.sun.tools.javac.parser.JavaTokenizer;
 
@@ -9,11 +8,13 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 public interface Formatter {
+    Logger logger = Logger.getLogger(Formatter.class.getSimpleName());
     List<Formatter> FORMATTERS = new ArrayList<>();
-    List<String> PREFIXES=new ArrayList<>();
+    List<String> PREFIXES = new ArrayList<>();
 
     static List<Formatter> getAllFormatters() {
         if (!FORMATTERS.isEmpty()) {
@@ -22,7 +23,7 @@ public interface Formatter {
         List<Class<? extends Formatter>> classes = Arrays.asList(SStringFormatter.class, FStringFormatter.class);
         List<Formatter> collect = classes.stream().map(a -> {
             try {
-                return a.newInstance();
+                return (Formatter)a.getConstructor().newInstance();
             } catch (Exception e) {
                 e.printStackTrace();
                 return null;
@@ -31,7 +32,8 @@ public interface Formatter {
         FORMATTERS.addAll(collect);
         return collect;
     }
-    static List<String> getPrefixes(){
+
+    static List<String> getPrefixes() {
         if (!PREFIXES.isEmpty()) {
             return PREFIXES;
         }
@@ -41,7 +43,32 @@ public interface Formatter {
     public String prefix();
 
 
-    public String printOut(List<GroupStringRange.StringRange> build,String text);
+    public String printOut(List<StringRange> build, String text);
 
-    public List<Item> stringRange2Group(JavaTokenizer javaTokenizer, char[] buf, List<GroupStringRange.StringRange> build, String text, int groupStartIndex) throws Exception;
+    public List<Item> stringRange2Group(JavaTokenizer javaTokenizer, char[] buf, List<StringRange> build, String text, int groupStartIndex) throws Exception;
+
+    List<StringRange> build(String text);
+
+    String stringTransfer(String text);
+
+    default String codeTransfer(String text) {
+        String toStr = text.replaceAll( "(^|[^\\\\])'([^']+?[^\\\\'])?'", "$1\"$2\"" )
+                .replaceAll( "\\\\?([a-z0-9\"']{1})", "$1" )
+                .replace( "\\\\", "\\" );
+        return toStr;
+    }
+
+    default String codeTransfer(char[] buf, int groupStartIndex, String text, int startIndex, int endIndex) {
+        String str = text.substring(startIndex, endIndex);
+        String toStr = codeTransfer(str);
+        int replaceCount = str.length() - toStr.length();
+        if (!Objects.equals(str, toStr)) {
+            logger.info( "替代后续文本 ${" + str + "}->${" + toStr + "}" );
+            System.arraycopy(toStr.toCharArray(), 0, buf, groupStartIndex + startIndex, toStr.length());
+            char[] array = new char[replaceCount];
+            Arrays.fill(array, ' ');
+            System.arraycopy(array, 0, buf, groupStartIndex + startIndex + toStr.length(), replaceCount);
+        }
+        return toStr;
+    }
 }
